--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -154,6 +154,7 @@
 \newcommand{\magenta}[1]{\textcolor{magenta}{#1}}
 \newcommand{\purple}[1]{\textcolor{purple}{#1}}
 \newcommand{\rosa}[1]{\textcolor{pink}{#1}}
+\newcommand{\marron}[1]{\textcolor{brown}{#1}}
 \newcommand{\transparente}[1]{\color[rgb]{1,1,1,0.5}{#1}}
 
 % Conjuntos entre llaves y paréntesis
@@ -330,7 +331,7 @@
 }
 
 %%% Emoticones
-\def\poo{\faIcon{poo}\xspace}
+\def\poo{\marron{\faIcon{poo}}\xspace}
 \def\grimaceR{\faIcon[regular]{grimace}\xspace}
 \def\grimace{\faIcon{grimace}\xspace}
 \def\angry{\faIcon[regular]{angry}\xspace}
