--- a/1-guia/ejercicios-1/ej-36-1.tex
+++ b/1-guia/ejercicios-1/ej-36-1.tex
@@ -20,17 +20,13 @@
 
 Seguramente vos no te confundís, porque sos un {\color{lightgray}{\textit{insoportable sabelotodo}}}, a diferencia mía pero:
 
-\begin{center}
-  \red{\atencion}
-  \parbox{0.9\textwidth}{
+\parrafoDestacado[\atencion]{
     Notar que la $f$ en la definición de la relación $\relacion$
     es una \textit{función específica}, siempre te devuelve algo en $\set{1,2,3,4}$. Es por eso que las composiciones que aparecen en la definición
     de $\relacion$ no explotan \faIcon[regular]{bomb} por los aires. Lo aclaro porque la \underline{$f$ que está en el conjunto $\F$ esa sí es una $f$ genérica}.
 
     La $f$ específica la pinto: $\blue{f}$
   }
-  \red{\atencion}
-\end{center}
 
 \begin{enumerate}[label=\roman*)]
   \item Para ver si una relación es de equivalencia hay que probar que sea \textit{reflexiva, simétrica y transitiva}.
