--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -1,16 +1,16 @@
 \begin{enunciado}{\ejercicio}
   En este ejercicio no hace falta usar inducción.
-  \begin{enumerate}[label=\roman*)]
-    \item Probar que $\sumatoria{k = 0}{n} \binom{n}{k}^2 = \binom{2n}{n}$. \qquad sug: $\binom{n}{k} = \binom{n}{n-k}$.
+  \begin{enumerate}[label=\alph*)]
+          \item Probar que $\sumatoria{k = 0}{n} \binom{n}{k}^2 = \binom{2n}{n}. \qquad \parentesis{\text{sug: } \binom{n}{k} = \binom{n}{n-k}}$.
     \item Probar que $\sumatoria{k = 0}{n} (-1)^k \binom{n}{k} = 0$.
     \item Probar que $\sumatoria{k = 0}{2n} \binom{2n}{k} = 4^n$ y deducir que $\binom{2n}{n} < 4^n$.
-    \item Calcular $\sumatoria{k = 0}{2n+1} \binom{2n+1}{k}$ y deducir que $\sumatoria{k=0}{n} \binom{2n+1}{k}$.
+    \item Calcular $\sumatoria{k = 0}{2n+1} \binom{2n+1}{k}$ y deducir $\sumatoria{k=0}{n} \binom{2n+1}{k}$.
   \end{enumerate}
 \end{enunciado}
 
 Binomio de Newton: $(x + y)^n = \sumatoria{k=0}{n} \binom{n}{k} x^n y^{n-k}$
 
-\begin{enumerate}[label=\roman*)]
+\begin{enumerate}[label=\alph*)]
   \item
         Voy a mostrarlo usando un argumento combinatorio. Básicamente voy a mostrar que con las dos expresiones estamos contando lo mismo.
         Imaginemos que tenemos un conjunto de $\rosa{n}$ cantidad de mujeres y otro de $\blue{n}$ cantidad de hombres.
