--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -106,7 +106,9 @@
   \item
         ¿Vale usar \textit{crudamente} la fórmula del binomio de Newton acá?
 
-        \textit{Si sí, se puede: }
+        \bigskip
+
+        \textit{Si \yellow{\underline{sí}}, se puede: }
         $$
           \textstyle
           \ub{(x + y)^n = \sumatoria{k=0}{n} \binom{n}{k} x^n y^{n-k}}{\text{Binomio de Newton}}
@@ -118,8 +120,12 @@
           }
         $$
 
-        Si más o menos se entendió el ejercicio anterior, uno va tomando idea de por donde va esto de sumar los números
-        combinatorios dada su simetría:
+        \bigskip
+
+        \bigskip
+
+        \textit{Si \yellow{\underline{no}}, se puede: }
+        Con una idea de por donde va esto de sumar los números combinatorios dada su simetría:
 
         \textit{Caso con $n$ impar:}
         $$
@@ -192,7 +198,7 @@
           \end{array}
         $$
 
-        \red{Tengo que probar que eso me da cero... a ver si alguien por facor me saca de este quilombo}
+        \red{Tengo que probar que eso me da cero... a ver si alguien por favor me saca de este quilombo}
 
         \hacer
 
