agrego ejercicios practica 3: 5

--- a/3-guia/ejercicios-3/ej-7-3.tex
+++ b/3-guia/ejercicios-3/ej-7-3.tex
@@ -12,5 +12,5 @@ como tenemos 17 libros, esto es
 \[\overbrace{3 \times 3 \times \cdots \times 3}^{17\ \text{veces}} = 3^{17}\]
 
 \begin{aportes}
-  \item \aporte{https://github.com/sigfripro}{Sigfri \github}
+  \item \aporte{https://github.com/sigfripro}{sigfripro \github}
 \end{aportes}
