--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -209,6 +209,6 @@
 \end{enumerate}
 
 \begin{aportes}
-  \item \aporte{https://github.com/sigfripro}{Sigfri \github}
+  \item \aporte{https://github.com/sigfripro}{sigfripro \github}
   \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
