--- a/1-guia/ejercicios-1/ej-22-1.tex
+++ b/1-guia/ejercicios-1/ej-22-1.tex
@@ -88,7 +88,7 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
   por lo tanto $b \relacion a$. Por lo tanto \underline{es simetrica}. \\
 
   \textit{Transitividad: }\par
-  Que una relacion sea transitiva significa que $a \relacion b \ytext b \relacion a \entonces a \relacion c$. 
+  Que una relacion sea transitiva significa que $a \relacion b \ytext b \relacion c \entonces a \relacion c$. 
   Para mi la forma mas sencilla y clara de hacer este tipo de pruebas es armar un sistema de ecuaciones y ver
   que sale. Tenemos: \par
   $\begin{cases}
@@ -119,7 +119,7 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
     b_0 + a_0 = 2k
   \end{cases}
   \]
-  Vemos que por conmutatividad de la suma las dos expresiones son identicas. LLamo $h = 2k$ y tengo: \\
+  Vemos que por conmutatividad de la suma las dos expresiones son identicas. Llamo $h = 2k$ y tengo: \\
   $a_0 + b_0 = h \flecha \quad a_0 = h - b_0$. De aca obtengo otra manera de expresar la relacion como
   \[
   (h - b_0) \relacion b_0
