fix typos guia 3

--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -111,9 +111,9 @@
         \textit{Si \yellow{\underline{sí}}, se puede: }
         $$
           \textstyle
-          \ub{(x + y)^n = \sumatoria{k=0}{n} \binom{n}{k} x^n y^{n-k}}{\text{Binomio de Newton}}
+          \ub{(x + y)^n = \sumatoria{k=0}{n} \binom{n}{k} x^k y^{n-k}}{\text{Binomio de Newton}}
           \Entonces{$x = 1$}[$y = -1$]
-          (1 - 1)^n = \sumatoria{k=0}{n} \binom{n}{k} 1^n \cdot (-1)^{n-k}
+          (1 - 1)^n = \sumatoria{k=0}{n} \binom{n}{k} 1^k \cdot (-1)^{n-k}
           \sii
           \cajaResultado{
             \sumatoria{k=0}{n} (-1)^{n-k} \binom{n}{k} = 0
