--- a/3-guia/ejercicios-3/ej-5-3.tex
+++ b/3-guia/ejercicios-3/ej-5-3.tex
@@ -61,7 +61,7 @@ $
   \end{tikzpicture}
 \end{center}
 
-Como se ve en ese diagrama de decisión, hay $\cajaResultado{24}$ formas de llegar a reconqusita desde Buenos Aires.
+Como se ve en ese diagrama de decisión, hay $\cajaResultado{24}$ formas de llegar a Reconquista desde Buenos Aires.
 
 \begin{aportes}
   \item \aporte{https://github.com/sigfripro}{sigfripro \github}
