fix ej 2 c guia 4

--- a/4-guia/ejercicios-4/ej-2-4.tex
+++ b/4-guia/ejercicios-4/ej-2-4.tex
@@ -72,23 +72,23 @@
         Trato de sacar la $n$ del lado derecho:
         $$
           \llave{l}{
-            2n - 1 \divideA n^2 + 5 \\
-            2n - 1 \divideA 2n - 1
+            2n + 1 \divideA n^2 + 5 \\
+            2n + 1 \divideA 2n + 1
           }
           \Entonces{$nF_2 - 2F_1 \to F_1$}
           \llave{l}{
-            2n - 1 \divideA -n - 10 \\
-            2n - 1 \divideA 2n - 1
+            2n + 1 \divideA n - 10 \\
+            2n + 1 \divideA 2n + 1
           }
-          \Entonces{$2F_1 + F_2 \to F_1$}
+          \Entonces{$2F_1 - F_2 \to F_1$}
           \llave{l}{
-            2n - 1 \divideA -21 \\
-            2n - 1 \divideA 2n - 1
+            2n + 1 \divideA -21 \\
+            2n + 1 \divideA 2n + 1
           }
         $$
-        Con ese resultado sé que $2n - 1$ es un \textit{\underline{posible divisor}} de  21:
+        Con ese resultado sé que $2n + 1$ es un \textit{\underline{posible divisor}} de  21:
         $$
-          \blue{d} = 3n - 2 \en \set{\pm1, \pm3, \pm7, \pm21}
+          \blue{d} = 2n + 1 \en \set{\pm1, \pm3, \pm7, \pm21}
         $$
         Pero ahora hay que probar para cuáles valores de $n$, obtengo alguno de esos valores $\blue{d}$,
         pero me da pajilla \rosa{\faIcon[regular]{grimace}}.
