--- a/3-guia/ejercicios-3/ej-26-3.tex
+++ b/3-guia/ejercicios-3/ej-26-3.tex
@@ -1,48 +1,61 @@
 \begin{enunciado}{\ejercicio}
-  Probar que $ \binom{2n}{n} > n 2^n,\, \paratodo n \geq 4$.
+  Probar que $ \binom{2n}{n} > n 2^n,$$ \paratodo n \geq 4$.
 \end{enunciado}
 
-Vamos a probarlo por induccion: \\
-\textit{Proposición: } \[p(n) = \binom{2n}{n} > n2^n,\, \paratodo n \geq 4\]
-\textit{Caso base: } \[p(4) = \binom{8}{4} > 4\cdot2^4 = 70 > 64 \text{\Tilde}\] \par    
+Vamos a probarlo por inducción:
 
-Ahora quiero probar que $p(n) \entonces p(n + 1)$, o sea quiero ver que:
-\[
-\binom{2(n+1)}{n+1} > (n+1)\cdot 2^{(n+1)}, \, \paratodo n \geq 4
-\]
-\[
-\binom{2n}{n} = \frac{(2n)!}{n!(2n-n)!} = \red{\frac{(2n)!}{(n!)^2}} \quad \text{Clave tener esta identidad a mano}
-\]
-Empezamos expandiendo el coeficiente binomial usando la formula con factoriales:
-\[
-\binom{2n+2}{n+1} = \frac{(2n+2)!}{(n+1)!\cdot(2n+2 - (n+1))!} = \frac{(2n+2)(2n+1)(2n)!}{(n+1)!\cdot(n+1)!}
-\]
-% \vspace{1cm}, \igual{llamada1}
-\[
-\frac{(2n+2)(2n+1)\red{(2n)!}}{(n+1)^2\cdot\red{(n!)^2}} \overset{\mathclap{\text{HI}}}{>} \frac{(2n+2)(2n+1)n\cdot2^n}{(n+1)^2}
-\]
+\textit{Proposición: }
+$$
+  p(n) : \binom{2n}{n} > n2^n,\, \paratodo n \geq 4
+$$
+
+\textit{Caso base: }
+$$
+  p(4) = \binom{8}{4} > 4\cdot2^4 = 70 > 64 \text{\Tilde}
+$$
+
+\textit{Paso inductivo: }
+
+Ahora quiero probar que:
+$$
+  p(n) \entonces p(n + 1),
+$$
+o sea quiero ver que:
+$$
+  \binom{2(n+1)}{n+1} > (n+1) \cdot 2^{(n+1)},\, \paratodo n \geq 4
+$$
+Y va a ser clave tener esta expresión a mano:
+$$
+  \binom{2n}{n} = \frac{(2n)!}{n!(2n-n)!}
+  \sisolosi
+  \ub{\displaystyle\binom{2n}{n} = \frac{(2n)!}{(n!)^2} > n 2^n}{\text{\purple{hipótesis inductiva}}}
+$$
+Empezamos expandiendo el coeficiente binomial usando la fórmula con factoriales:
+$$
+  \everymath{\displaystyle}
+  \begin{array}{rcl}
+    \binom{2n+2}{n+1} = \frac{(2n+2)!}{(n+1)! \cdot (2n+2 - (n+1))!} & = & \frac{(2n+2)(2n+1)(2n)!}{(n+1)!\cdot(n+1)!}                                                                                             \\
+                                                                     & = & \frac{(2n+2)(2n+1)\purple{(2n)!}}{(n+1)^2 \cdot \purple{(n!)^2}} \taa{\text{\purple{HI}}}{}> \frac{(2n+2)(2n+1)\purple{n 2^n}}{(n+1)^2}
+  \end{array}
+$$
 Ahora quiero ver que:
-\[
+$$
   \frac{(2n+2)(2n+1)n\cdot2^n}{(n+1)^2} > (n+1)\cdot2^{(n+1)}
-\]
-\[
-\frac{\red{2^n\cdot2}\cancel{(n+1)}(2n+1)n}{(n+1)^{\cancel{2}}} > (n+1)\cdot\red{2^n\cdot2}
-\]
-\[
-\frac{(2n + 1)n}{n+1} > n + 1
-\]
-\[
-2n^2 + n > n^2 +2n + 1
-\]
-\[
-n^2 - n > 1  
-\]
-Esto ultimo es verdadero para $n \in \naturales_{>1} 1$, por ende para $n \geq 4$ la prueba inductiva es valida, y
-queda probado que:
-\[
+  \Sii{\red{!!}}
+  \frac{(2n + 1)n}{n+1} > n + 1
+  \Sii{\red{!}}
+  n^2 - n > 1
+$$
+En el \red{!!} y el \red{!}, son factores comunes, simplificaciones acomodar y nada raro. Pero te queda a vos, porque
+nada te aportaría verlas.
+
+Esto último es verdadero para $n \en \naturales_{>1}$, por ende para $n \geq 4$ la prueba inductiva será válida, y
+queda probado por el principio de inducción que:
+$$
   \binom{2n}{n} > n 2^n,\, \paratodo n \geq 4
-\]
+$$
 
 \begin{aportes}
   \item \aporte{https://github.com/sigfripro}{sigfripro \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
