--- a/4-guia/ejercicios-4/ej-3-4.tex
+++ b/4-guia/ejercicios-4/ej-3-4.tex
@@ -20,26 +20,35 @@
         $p(1)$ es verdadera. \Tilde\par
 
         \textit{Paso inductivo:}\par
-        Asumo que $p(\blue{k}): a-b \divideA a^{\blue k} - b^{\blue k}$ es verdadera
+        Asumo que
+        $$
+          p(\blue{k}): \ub{a-b \divideA a^{\blue k} - b^{\blue k}}{\text{\purple{hipótesis inductiva}}}
+        $$
+        es verdadera
         $\entonces$ quiero probar que
-        $p(\blue{k + 1}) : a-b \divideA a^{\blue{k + 1}} - b^{\blue{k + 1}}$
+        $$
+          p(\blue{k + 1}) : a-b \divideA a^{\blue{k + 1}} - b^{\blue{k + 1}}
+        $$
         también lo sea.
 
+        Parto de algo verdadero, de la \purple{hipótesis inductiva}:
         $$
           \llave{l}{
             a - b \divideA a^k -b^k \\
-            a - b \divideA a^k -b^k
+            a - b \divideA a - b
           }
-          \Entonces{$\times \magenta{a}$}[$\times \magenta{b}$]
+          \Entonces{$\times \magenta{a}$}[$\times \magenta{b^k}$]
           \llave{l}{
             a - b \divideA a^{k+1} - ab^k \\
-            a - b \divideA ba^k -b^{k+1}
+            a - b \divideA ab^k - b^{k+1}
           }
-          \Entonces{$+$}
+          \Entonces{$F_1 + F_2$}
           \llave{l}{
-            a - b \divideA a^{k+1} - b^{k+1}. \\
-          }\Tilde
+            a - b \divideA a^{k+1} - b^{k+1}
+          }
         $$
+        La \textit{epifanía} esa de multiplicar $\magenta{a} \ytext \magenta{b^k}$ se te puede ocurrir o no,
+        si no la veías, no te mortifiques, la cosa no es por ahí \faIcon[regular]{kiss}.
 
         Como $p(1),\, p(k) \ytext p(k+1)$ resultaron verdaderas por el principio de
         inducción $p(n)$ también lo es.
@@ -52,28 +61,29 @@
         $$
         Multiplicando la ecuación de congruencia por $\magenta{a}$ sucesivas
         veces me formo:\par
-        $
-          \llave{rcl}{
+        $$
+          \llave{rclcc}{
             \magenta{a} \cdot a = a^2
-                  & \conga{a+b} &
-            \magenta{a} \cdot (-b)
+            & \conga{a+b} & \magenta{a} \cdot (-b) &
             \conga{a+b}
-            (-1)^2 b                                 \\
-            \quad & \vdots      & \quad \ot\llamada{1} \\
+            (-1)^2 b                                 & \\
+            \quad & \vdots      & \quad \ot\llamada{1} & & \\
             a^n   & \conga{a+b} & (-1)^n \cdot b^n
-            \to
+            &\to&
             \llave{ll}{
-              \congruencia{a^n}{ b^n}{a+b}             & \text{con n par}   \\
+              \congruencia{a^n}{b^n}{a+b}             & \text{con n par}   \\
               \congruencia{a^n}{(-1)^n \cdot b^n}{a+b} & \text{con n impar} \\
             }
-          }\\
+          }
+        $$
+        $$
           \boxed{
-            \llave{rccl}{
+            \llave{rrcl}{
               \text{Con $n$ par: }   & \congruencia{a^n}{b^n}{a+b}   & \entonces & a+b \divideA a^n - b^n \\
               \text{Con $n$ impar: } & \congruencia{a^n}{- b^n}{a+b} & \entonces & a+b \divideA a^n + b^n
             }
           }
-        $\par
+        $$
 
         \textit{$\llamada1$Inducción:}
         $$
@@ -91,32 +101,39 @@
         $$
         $p(1)$ es verdadera.\par
 
-        \textit{Paso inductivo: }\par
-        $
-          \begin{array}{c}
-            p(\blue{k}) : \congruencia{a}{-b}{a+b}
+        \textit{Paso inductivo: }
+
+        Asumo que
+        $$
+          p(\blue{k}) : \ub{\congruencia{a}{-b}{a+b}
             \entonces
             \congruencia{a^{\blue{k}}}{(-1)^{\blue{k}} \cdot b^{\blue k}}{a+b}
-            \text{ asumo verdadera para algún } k \en \enteros                           \\
-            \entonces                                          \text{quiero probar que } \\
-            p(\blue{k+1}) : \congruencia{a}{-b}{a+b}
-            \entonces
-            \congruencia{a^{\blue{k+1}}}{(-1)^{\blue{k}} \cdot b^{\blue k}}{a+b}
-          \end{array}\\
-          \text{Partiendo de } p(\blue{k}):
-          \llave{c}{
+          }{\text{\purple{hipótesis inductiva}}}
+        $$
+        es verdadera asumo verdadera para algún  $k \en \enteros$                           \\
+        Entonces quiero probar que:
+        $$
+          p(\blue{k+1}) : \congruencia{a}{-b}{a+b} \entonces
+          \congruencia{a^{\blue{k+1}}}{(-1)^{\blue{k}} \cdot b^{\blue k}}{a+b}
+        $$
+        también lo sea.
+
+        Partiendo de  $p(\blue{k})$, la \purple{hipótesis inductiva}:
+        $$
+          \begin{array}{rcl}
             \congruencia{a}{-b}{a+b}
             \entonces
-            \congruencia{a^k}{(-1)^k\cdot b^k}{a+b}                                                         \\
-            \Entonces{multiplico}[por $\yellow{a}$]                                             \\
+            \congruencia{a^k}{(-1)^k\cdot b^k}{a+b}
+             & \Entonces{$\times \yellow{a}$} &
             \yellow a \cdot a^k =
-            \congruencia{a^{k+1}}{(-1)^k\cdot \ub{\yellow a}{ \conga{a+b} -b} \cdot b^k}{a+b} \\
-            \entonces                                                                                       \\
-            \congruencia{a^{k+1}}{(-1)^{k+1} \cdot b^{k+1}}{a+b}
-            \sisolosi
-            a + b \divideA a^{k+1} - (-1)^{k+1} b^{k+1} \Tilde
-          }
-        $\par
+            \congruencia{a^{k+1}}{(-1)^k\cdot \oa{\yellow a}{ \conga{a+b} -b} \cdot b^k}{a+b} \\
+
+             & \entonces                      &
+            \congruencia{a^{k+1}}{(-1)^{k+1} \cdot b^{k+1}}{a+b}                              \\
+             & \Sii{def}                      &
+            a + b \divideA a^{k+1} - (-1)^{k+1} b^{k+1}
+          \end{array}
+        $$
 
         Como $p(1),\ p(k) \ytext p(k+1)$
         son verdaderas por principio de inducción lo es también $p(n) \paratodo n \en \naturales$
