--- a/4-guia/ejercicios-4/ej-3-4.tex
+++ b/4-guia/ejercicios-4/ej-3-4.tex
@@ -48,7 +48,7 @@
           }
         $$
         La \textit{epifanía} esa de multiplicar $\magenta{a} \ytext \magenta{b^k}$ se te puede ocurrir o no,
-        si no la veías, no te mortifiques, la cosa no es por ahí \faIcon[regular]{kiss}.
+        si no la viste, no te mortifiques, \textit{la cosa no va por ahí}  \faIcon[regular]{kiss}.
 
         Como $p(1),\, p(k) \ytext p(k+1)$ resultaron verdaderas por el principio de
         inducción $p(n)$ también lo es.
