agrego aportes olivPortero

--- a/3-guia/ejercicios-3/ej-12-3.tex
+++ b/3-guia/ejercicios-3/ej-12-3.tex
@@ -56,4 +56,5 @@
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/olivportero}{Oliv Portero \github}
 \end{aportes}
