--- a/3-guia/ejercicios-3/ej-17-3.tex
+++ b/3-guia/ejercicios-3/ej-17-3.tex
@@ -69,4 +69,5 @@ $\binom{n}{k} = \frac{n!}{k!(n-k)!}$
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/olivportero}{Oliv Portero \github}
 \end{aportes}
