--- a/4-guia/ejercicios-4/ej-3-4.tex
+++ b/4-guia/ejercicios-4/ej-3-4.tex
@@ -143,4 +143,5 @@
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/olivportero}{Oliv Portero \github}
 \end{aportes}
