--- a/4-guia/ejercicios-4/ej-1-4.tex
+++ b/4-guia/ejercicios-4/ej-1-4.tex
@@ -46,14 +46,19 @@
         $12 \divideA 20 + 4 \entonces 12 \noDivide 20$  \ y\   $ 12\noDivide 4 $
 
   \item
-        \separadorCorto
-        \hacer
+        $a\divideA c \ytext b \divideA c \entonces a \cdot b \divideA c$\par%
+        $4\divideA 12 \ytext 6 \divideA 12 \text{ pero } 24 \noDivide 12$
+        
   \item
-        \separadorCorto
-        \hacer
+        $a\divideA b \entonces a \leq b$\par
+        $2\divideA -4 \text{ pero } 2 > -4$
   \item
-        \separadorCorto
-        \hacer
+        $a\divideA b \entonces |a| \leq |b|$\par
+        $4 \divideA 0 \text{ pero }|4| > 0$\par
+        Igual, si $b \neq 0$ es verdadero, el enunciado no lo especifica pero ese caso es el que esta bueno ver.\par
+        $\text{si } a\divideA b,\, b = k \cdot a$, tomo el modulo de todo porque que todo sea positivo no va a cambiar la veracidad de la prueba.\par
+        $|b| = |k|\cdot|a|$, $|k| \geq 1$ asi que acoto por esa expresion, queda $|b| = |k|\cdot|a| \geq 1\cdot|a|$, finalmente $|b| \geq |a|,\, b \neq 0$
+
   \item $a \divideA b + a^2 \entonces a \divideA b$\par
         $  a \divideA b + a^2
           \entonces
@@ -126,4 +131,5 @@
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/sigfripro}{sigfripro \github}
 \end{aportes}
